--- a/templates/index.html
+++ b/templates/index.html
@@ -21,11 +21,6 @@
     {% if 'summary' in request.form.getlist('output') %}
     <h3>Summary:</h3>
     <p>{{ summary }}</p>
-    <audio controls>
-        <source src="{{ url_for('static', filename='summaries/summary_audio.mp3') }}" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
-    
     {% endif %}
     {% if 'transcription' in request.form.getlist('output') %}
     <h3>Transcription:</h3>
@@ -33,7 +28,7 @@
     {% endif %}
     {% if 'identification' in request.form.getlist('output') %}
     <h3>Identification:</h3>
-    <!-- Add identification output here -->
+    <p>{{ language }}</p>
     {% endif %}
     {% endif %}
 </body>
