--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
             {% endif %}
             {% if 'identification' in request.form.getlist('output') %}
             <div class="output-item">
-                <h3>Identification:</h3>
+                <h3>Language Identification:</h3>
                 <p>{{ language }}</p>
             </div>
             {% endif %}
